RESOLVED FIXED118760
Many crashes loading Java applets after r152701
https://bugs.webkit.org/show_bug.cgi?id=118760
Summary Many crashes loading Java applets after r152701
Tim Horton
Reported 2013-07-16 18:56:20 PDT
Missed some places where we have to reacquire the renderer (or it can be null) upon reattach. <rdar://problem/14462836>
Attachments
patch (2.70 KB, patch)
2013-07-16 18:58 PDT, Tim Horton
dino: review+
Tim Horton
Comment 1 2013-07-16 18:58:52 PDT
Tim Horton
Comment 2 2013-07-16 19:04:01 PDT
Note You need to log in before you can comment on or make changes to this bug.