Many crashes loading Java applets after r152701 https://bugs.webkit.org/show_bug.cgi?id=118760 <rdar://problem/14462836>

Reviewed by Dean Jackson.

* html/HTMLAppletElement.cpp:
(WebCore::HTMLAppletElement::updateWidget):
Re-acquire the renderer after calling createJavaAppletWidget,
because it can cause reattach, leaving our renderer pointer stale.

* loader/SubframeLoader.cpp:
(WebCore::SubframeLoader::createJavaAppletWidget):
Null-check renderer, as element->renderEmbeddedObject() can very clearly
return null in some cases.


Canonical link: https://commits.webkit.org/136634@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152754 268f45cc-cd09-0410-ab3c-d52691b4dbfc